--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -7,8 +7,9 @@ body {
     font-family: 'Modernist', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #161616;
-    color: #fc4537;
+    background-color: #f1eff2;
+    /* background-image: url('../media/LOLOMG.png'); */
+    color: #983d50;
 }
 
 .container {
@@ -25,7 +26,8 @@ h1 {
 
 h1.nebula-logo {
     font-size: 100px;
-    color: #fc4537;
+    /* color: #fc4537; */
+    color: #983d50;
     margin: 0;
     padding: 0;
 }
@@ -60,9 +62,9 @@ h1.nebula-logo {
 .logo-container {
     max-width: 600px;
     text-align: center;
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
+    display: flex;
+    align-items: left;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -80,7 +82,7 @@ input[type="file"] {
 
 button {
     padding: 10px 20px;
-    background-color: #fc4537;
+    background-color: #983d50;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -94,7 +96,7 @@ button:hover {
 
 /* Drop Zone styles */
 .drop-zone {
-    border: 2px dashed #fc4537;
+    border: 2px dashed #983d50;
     padding: 20px;
     margin-bottom: 20px;
     cursor: pointer;
@@ -108,4 +110,14 @@ button:hover {
 /* Highlight styles */
 .highlight {
     border-color: #b2342b;
+}
+
+
+/* character */
+#nebula-image {
+    display: flex;
+    width: 50%;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* margin-bottom: 20px; */
 }
