--- a/frontend/styles/containers.css
+++ b/frontend/styles/containers.css
@@ -1,23 +1,37 @@
 .container {
-    max-width: 600px;
-    margin: 50px auto;
+    display: flex;
+    max-width: 90vw;
+    height: max-content;
+    margin: 20px auto;
     text-align: center;
+    flex-direction: column;
+    align-items: center;
 }
 
+/* 
+    site-container containts both
+    character-container and upload-form-container
+*/
 .site-container {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    max-width: 1200px;
+    max-width: 100vw;
     margin: 0 auto;
+    flex-wrap: nowrap;
 }
 
 .character-container {
+    display: flex;
+    align-items: flex-end;
     flex: 1;
     text-align: center;
 }
 
 .upload-form-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
     flex: 1;
-    padding: 0 20px;
+    text-align: center;
+    /* padding: 0 20px; */
 }
