--- a/frontend/styles/containers.css
+++ b/frontend/styles/containers.css
@@ -8,6 +8,17 @@
     align-items: center;
 }
 
+.logo-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    max-width: 600px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
 /* 
     site-container containts both
     character-container and upload-form-container
