Implemented fixed height for the Nebula character.
- It no longer goes past the height of the browser
- Replaced the image with the one with a transparent edge.

--- a/frontend/styles/containers.css
+++ b/frontend/styles/containers.css
@@ -6,7 +6,7 @@
     align-items: center;
 
     max-width: 90vw;
-    height: max-content;
+    height: 100vh;
 }
 
 .logo-container {
@@ -42,7 +42,7 @@
 
 .upload-form-container {
     display: flex;
-    flex: 1;
+    flex: 1 1 0%;
     align-items: flex-start;
     justify-content: center;
     text-align: center;
