--- a/frontend/styles/character.css
+++ b/frontend/styles/character.css
@@ -1,6 +1,7 @@
 #nebula-image {
     display: flex;
     width: 100%;
+    max-height: 85vh;
     /* flex-direction: column; */
     /* align-items: center; */
     /* margin-bottom: 20px; */
