--- a/frontend/styles/containers.css
+++ b/frontend/styles/containers.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    margin: 20px auto;
+    margin: 0 auto 20px auto;
     text-align: center;
     flex-direction: column;
     align-items: center;
@@ -42,6 +42,7 @@
 
 .upload-form-container {
     display: flex;
+    flex-direction: column;
     flex: 1 1 0%;
     align-items: flex-start;
     justify-content: center;
