--- a/frontend/styles/drop-zone.css
+++ b/frontend/styles/drop-zone.css
@@ -10,6 +10,29 @@
     margin: 0;
 }
 
-.highlight {
-    border-color: #b2342b;
+/* Overlay styles */
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #983d50;
+    z-index: 9999;
+    text-align: center;
+}
+
+.overlay-content {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #f1eff2;
+    font-size: 24px;
+    font-weight: bold;
 }
