--- a/frontend/styles/character.css
+++ b/frontend/styles/character.css
@@ -4,5 +4,5 @@
     max-height: 85vh;
     /* flex-direction: column; */
     /* align-items: center; */
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
 }
